# mp4-download-and-converter

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.py  helper.py  main.py  mp4_type.py  mp4_types.py  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/workflows/: CI.yaml
logs/: logging.py
modules/: convert.py  download.py
tests/: conftest.py  example.txt  test_commands.py
