[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "main"
authors = [{name = "sammiee5311", email = "sammiee5311@gmail.com"}]
maintainers = [{name = "sammiee5311", email = "sammiee5311@gmail.com"}]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dynamic = ["version", "description"]
dependencies = [
  "python-dotenv",
  "requests",
  "ffmpeg-python",
  "validators",
  "click"
]

[project.optional-dependencies]
test = [
  "pytest",
  "black",
  "pytest-cov",
  "pytest-env",
  "mypy",
  "tox"
]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
env = [
  "DOWNLOAD_PATH=tests/download",
  "CONVERTED_PATH=tests/converted",
  "VIDEOS_TEXT_FILE=tests/example.txt"
]
testpaths = [
  "tests",
]

[tool.mypy]
ignore_missing_imports = true
exclude = ["venv/"]